# control-tower

./: .pre-commit-config.yaml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  package-lock.json  package.json  pipelineInfo.ts  prisma.config.ts  pyproject.toml  server.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: pipelineInfo.ts  pipeline_registry.json  server.ts
backend/src/config/: bootstrap.ts  database.ts  kafka.ts  prisma.ts
backend/src/controllers/: pipeline.ts
backend/src/routes/: pipeline.ts
backend/src/scripts/: seedKafka.ts
backend/src/types/: events.ts  pipelineInfo.ts
backend/src/workers/: pipelineWorkers.ts
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: PipelineType.tsx  layout.tsx  page.tsx
frontend/app/components/: PipelineFilter.tsx  PipelineTable.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: EditPipelineModel.tsx  PipelineFilter.tsx  PipelineTable.tsx
frontend/src/hooks/: usePipelines.ts
frontend/src/utils/: api.ts
